--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
+/* App.css */
+* {
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    background-color: rgb(240, 240, 240);
+    height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html,
+body,
+#potato,
+.container {
+    height: 100%;
+    display: flex;
+    justify-content: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.loader {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.movies {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 50px;
+    padding-top: 70px;
+    align-items: flex-start;
+    width: 80%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.movies .movie {
+    width: 45%;
+    background-color: white;
+    margin-bottom: 40px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    font-weight: 300;
+    padding: 20px;
+    position: relative;
+    color: #5b6165;
+    box-shadow: 5px 5px 6px grey;
+}
+.movie__data {
+    box-sizing: border-box;
+    /* width: 50%; */
+}
+.movie img {
+    position: relative;
+    top: -40px;
+    max-width: 120px;
+    margin-right: 30px;
+}
+
+.movie .movie__title,
+.movie .movie__year {
+    margin: 0;
+    font-weight: 300;
+}
+
+.movie .movie__title {
+    margin-bottom: 5px;
+    font-size: 1.5em;
+    font-weight: 400;
+    color: black;
+}
+
+.movie .movie__genres {
+    list-style: none;
+    padding: 0;
+    /* flex-wrap: wrap; */
+    /* margin: 0; */
+    display: flex;
+    margin: 5px 0;
+}
+
+.movie__genres li {
+    margin-top: 3px;
+    margin-right: 10px;
+    font-size: 20px;
 }
